parser/test/corpus/functions
=================================================
Infered Type
=================================================

fn main() {
  return 1;
}

-------------------------------------------------

(source_file
  (definition_list
    (function_definition
      (identifier)
      (parameter_list)
      (block
        (statement_list
          (return_statement
            (integer)))))))

=================================================
Explicit Type
=================================================

fn main() -> int {
    return 1;
}

-------------------------------------------------

(source_file
    (definition_list
    (function_definition
        (identifier)
        (parameter_list)
        (single_value_type
          (identifier))
        (block
        (statement_list
            (return_statement
            (integer)))))))

=================================================
Parameters
=================================================

fn main(a: int, b: float, c: bool) {
  return 1;
}

-------------------------------------------------

(source_file
  (definition_list
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (single_value_type
            (identifier)))
        (parameter
          (identifier)
          (single_value_type
            (identifier)))
        (parameter
          (identifier)
          (single_value_type
            (identifier))))
      (block
        (statement_list
          (return_statement
            (integer)))))))

=================================================
Parameters w/ Explicit Type
=================================================

fn main(a: int, b: float, c: bool) -> int {
  return 1;
}

-------------------------------------------------

(source_file
  (definition_list
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (single_value_type
            (identifier)))
        (parameter
          (identifier)
          (single_value_type
            (identifier)))
        (parameter
          (identifier)
          (single_value_type
            (identifier))))
      (single_value_type
        (identifier))
      (block
        (statement_list
          (return_statement
            (integer)))))))

=================================================
Call
=================================================

fn foo(x: int) {
  return x;
}

fn main() {
  return foo(1);
}

-------------------------------------------------

(source_file
  (definition_list
    (function_definition
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (single_value_type
            (identifier))))
      (block
        (statement_list
          (return_statement
            (variable_reference
              (identifier))))))
    (function_definition
      (identifier)
      (parameter_list)
      (block
        (statement_list
          (return_statement
            (function_call_expression
              (identifier)
              (argument_list
                (argument
                  (integer))))))))))
